# ml_classification

./: .gitignore  Dockerfile  Untitled.ipynb  _quarto.yml  build_container  flake.nix  initial_setup.sh  launch_notebook  main.html  main.ipynb  monitor_nvidia  open_docker  port_forwarding.sh  pyproject.toml  requirements.txt  setup.sh
ml_classification/: main.qmd
src/: main.qmd
