[tool.poetry]
name = "ml-classification"
version = "0.1.0"
description = ""
authors = ["Staneesh <blkreasons@outlook.com>"]
readme = "README.md"
packages = [{include = "ml_classification"}]

[tool.poetry.dependencies]
python = "^3.11"
quarto = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
